--- a/css/fashionade.css
+++ b/css/fashionade.css
@@ -1,16 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-/*
 @font-face {
-  font-family: "Roboto";
-  font-style: normal;
+    font-family: "Roboto";
+    font-style: normal;
 }
 @font-face {
-  font-family: "Lato";
-  unicode-range: U+0020-007E;
-  font-style: normal;
+    font-family: "Lato";
+    unicode-range: U+0020-007E;
+    font-style: normal;
 }
-*/
 [data-fashionade-render="recommend"] * {
     margin:0;
     padding:0;
@@ -116,35 +114,12 @@
 }
 [data-fashionade-render="recommend"] .fashionade--layerWrap .fashionade--recommendContentList .fashionade--mainImageWrap {
     overflow:hidden;
-    width:351px;
+    width:280px;
     height:424px;
-}
-[data-fashionade-render="recommend"] .fashionade--layerWrap .fashionade--mainImageThumbList {
-    overflow:hidden;
-    overflow-y:auto;
-    float:left;
-    width:55px;
-    height:424px;
-}
-[data-fashionade-render="recommend"] .fashionade--layerWrap .fashionade--mainImageThumbList li {
-    overflow:hidden;
-    width:55px;
-    height:66px;
-    margin-top:6px;
-    background-size:55px 66px;
-    background-size:cover;
-    opacity:0.5;
-    background-color:#efefef;
-}
-[data-fashionade-render="recommend"] .fashionade--layerWrap .fashionade--mainImageThumbList li.on {
-    opacity:1;
-}
-[data-fashionade-render="recommend"] .fashionade--layerWrap .fashionade--mainImageThumbList li:first-child {
-    margin-top:0;
+    margin:0 auto;
 }
 [data-fashionade-render="recommend"] .fashionade--layerWrap .fashionade--mainImage {
-    float:right;
-    width:283px;
+    width:280px;
     height:424px;
     background-color:#efefef;
 }
